--- a/blog-user/index.html
+++ b/blog-user/index.html
@@ -11,8 +11,8 @@
 	<title>未月拾叁</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
-	<script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js" async></script>
+	<script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js" async></script>
 </head>
 <body>
 <div id="app"></div>
